fixed some layout issues in nav. Tested layout on all devices, both orientations

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -54,6 +54,7 @@
   text-decoration: none;
   line-height: 1.5;
   padding: 4rem 0;
+  margin: 0;
   border-radius: 1rem;
 }
 
@@ -120,7 +121,7 @@
   .Nav {
     max-width: 100%;
     flex-direction: row;
-    max-height: 20vh;
+    max-height: fit-content;
     min-width: 100vw;
     align-items: center;
     justify-content: space-around;
@@ -142,13 +143,11 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    max-height: 20vh;
     line-height: 0;
     background-color: transparent;
   }
 
   .Nav_items li {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
   }
-
 }
